# wis2box-aodn

./: .gitignore  .pre-commit-config.yaml  METADATA.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: manage_metadata.yml
resources/aws-ec2/: ec2-settup-ebs.sh  ec2-settup-efs.sh  publish_metadata.sh  unpublish_metadata.sh
resources/wis2-notebooks/: bufr_decoding.ipynb  nc_exploration.ipynb
src/aws-ec2/: create_efs_host_data.sh
wis2-pipeline/: README.md
wis2-pipeline/upstream-flow/: load.py  pyproject.toml  transform.py
wis2-pipeline/wis2-aodn-upstream/: README.md  pyproject.toml
wis2-pipeline/wis2-aodn-upstream/src/common/lib/: config.py
wis2-pipeline/wis2-aodn-upstream/src/common/lib/util/: __init__.py  fileops.py  misc.py
wis2-pipeline/wis2-aodn-upstream/src/common/lib/util/boltons/: README.md
wis2-pipeline/wis2-aodn-upstream/src/common/tasks/: fileops.py
wis2-pipeline/wis2-aodn-upstream/src/wis2_aodn_upstream/: etl.py  wis2_buoys_flow.py
wis2-pipeline/wis2-aodn-upstream/src/wis2_aodn_upstream/config/: APOLLO_BAY.yaml
wis2-pipeline/wis2box-data/: README.md
wis2-terraform/: .gitignore  README.md  main.tf
wis2-terraform/ec2/: main.tf  terraform.tfvars  variables.tf
wis2box/: README.txt  docker-compose.data-subscriber.yml  docker-compose.images-1.0.0.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.ssl.yml  docker-compose.yml  wis2box-ctl.py  wis2box.env.example
wis2box/loki/: loki-config.yml
wis2box/nginx/: nginx-ssl.conf  (+1 more)
(+26 files in other folders)
